--- a/car-app/package.json
+++ b/car-app/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.2.1",
     "@angular/platform-browser-dynamic": "^5.2.1",
     "@angular/router": "^5.2.1",
+    "angular-scroll": "^1.0.2",
     "angular2-flash-messages": "^2.0.5",
     "angular2-jwt": "^0.2.3",
     "bcryptjs": "*",
