--- a/car-app/package.json
+++ b/car-app/package.json
@@ -13,7 +13,8 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^5.2.1",
+    "@angular/animations": "^5.2.5",
+    "@angular/cdk": "^5.2.1",
     "@angular/common": "^5.2.1",
     "@angular/compiler": "^5.2.1",
     "@angular/core": "^5.2.1",
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "^5.2.1",
     "@angular/platform-browser-dynamic": "^5.2.1",
     "@angular/router": "^5.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "angular-scroll": "^1.0.2",
     "angular2-flash-messages": "^2.0.5",
     "angular2-jwt": "^0.2.3",
