--- a/car-app/package.json
+++ b/car-app/package.json
@@ -28,11 +28,13 @@
     "angular2-flash-messages": "^2.0.5",
     "angular2-jwt": "^0.2.3",
     "angular2-wizard": "^0.4.0",
+    "angularfire2": "^5.0.0-rc.6",
     "bcryptjs": "*",
     "body-parser": "*",
     "core-js": "^2.4.1",
     "cors": "*",
     "express": "*",
+    "firebase": "^4.8.0",
     "jsonwebtoken": "*",
     "mongoose": "^5.0.1",
     "passport": "*",
@@ -44,6 +46,7 @@
     "@angular/cli": "1.6.3",
     "@angular/compiler-cli": "^5.2.1",
     "@angular/language-service": "^5.2.1",
+    "@firebase/firestore": "^0.3.4",
     "@types/googlemaps": "^3.30.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
