--- a/car-app/package.json
+++ b/car-app/package.json
@@ -29,12 +29,12 @@
     "angular2-jwt": "^0.2.3",
     "angular2-wizard": "^0.4.0",
     "angularfire2": "^5.0.0-rc.6",
+    "firebase": "4.8.0",
     "bcryptjs": "*",
     "body-parser": "*",
     "core-js": "^2.4.1",
     "cors": "*",
     "express": "*",
-    "firebase": "^4.8.0",
     "jsonwebtoken": "*",
     "mongoose": "^5.0.1",
     "passport": "*",
