--- a/car-app/package.json
+++ b/car-app/package.json
@@ -28,8 +28,8 @@
     "angular2-flash-messages": "^2.0.5",
     "angular2-jwt": "^0.2.3",
     "angular2-wizard": "^0.4.0",
-    "angularfire2": "^5.0.0-rc.6",
-    "firebase": "4.8.0",
+    "angularfire2": "5.0.0-rc.4",
+    "firebase": "4.8.2",
     "bcryptjs": "*",
     "body-parser": "*",
     "core-js": "^2.4.1",
@@ -46,7 +46,6 @@
     "@angular/cli": "1.6.3",
     "@angular/compiler-cli": "^5.2.1",
     "@angular/language-service": "^5.2.1",
-    "@firebase/firestore": "^0.3.4",
     "@types/googlemaps": "^3.30.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
